--- a/ui/app/css/itcss/components/menu.scss
+++ b/ui/app/css/itcss/components/menu.scss
@@ -12,6 +12,7 @@
     align-items: center;
     position: relative;
     z-index: 200;
+    font-weight: 200;
 
     @media screen and (max-width: 575px) {
       padding: 14px;
