--- a/ui/app/css/itcss/components/send.scss
+++ b/ui/app/css/itcss/components/send.scss
@@ -525,8 +525,9 @@
 
     @media screen and (max-width: $break-small) {
       margin-top: 0px;
-      height: 407px;
+      height: 0;
       overflow-y: auto;
+      flex: 1 1 auto;
     }
   }
 
@@ -647,6 +648,7 @@
     align-items: center;
     border-top: 1px solid $alto;
     background: $white;
+    padding: 0 12px;
   }
 
   &__next-btn,
