--- a/ui/app/css/itcss/components/transaction-list.scss
+++ b/ui/app/css/itcss/components/transaction-list.scss
@@ -19,12 +19,15 @@
     // margin-top: 0.2em;
     // margin-bottom: 0.6em;
     justify-content: center;
+    flex: 0 0 auto;
   }
 
   .tx-list-header {
     align-self: center;
     font-size: 12px;
     color: $dusty-gray;
+    font-family: Roboto;
+    text-transform: uppercase;
   }
 }
 
@@ -66,7 +69,7 @@
   flex-flow: column nowrap;
 
   @media screen and (max-width: $break-small) {
-    padding: 0 1.3em;
+    padding: 0 1.3em .8em;
   }
 
   @media screen and (min-width: $break-large) {
@@ -112,7 +115,7 @@
     font-size: 12px;
 
     .tx-list-status {
-      font-size: 12px !important;
+      font-size: 14px !important;
     }
 
     .tx-list-account {
@@ -121,10 +124,12 @@
 
     .tx-list-value {
       font-size: 14px;
+      line-height: 18px;
     }
 
     .tx-list-fiat-value {
       font-size: 12px;
+      line-height: 16px;
     }
   }
 }
@@ -152,6 +157,14 @@
     justify-content: flex-start;
     align-items: flex-start;
     align-self: center;
+
+    .tx-list-account-wrapper {
+      height: 18px;
+
+      .tx-list-account {
+        line-height: 14px;
+      }
+    }
   }
 
   @media screen and (min-width: $break-large) {
